# mgc-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: agent-demo-use-cases.md  api-integration.md  fixed-code-download-plan.md  frontend-backend-interaction-flow.md  frontend-page-work-split-plan.md  prd-technical-scope-analysis.md  project-technical-solution.md  tcr-agent-current-api.md  team-integration-flow-plan.md
examples/: README.md
examples/python_bug/: project.json  project_ai_review.json  project_llm_generated_tests.json  test_main.py
examples/python_complex_checkout/: README.md  checkout.py  requirement.txt
examples/python_custom_command/: check_palindrome.py  palindrome.py  project.json
examples/python_medium_subscription/: README.md  requirement.txt  subscription.py
examples/python_multi_file/: discounts.py  inventory.py  project.json  test_inventory.py
examples/python_no_tests/: order_pricing.py  project_full_llm_large_tokens.json
examples/python_passing/: main.py  project.json  test_main.py
examples/python_small_cart/: README.md  cart_pricing.py  requirement.txt
examples/python_small_inventory/: README.md  reorder.py  requirement.txt
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: globals.css  (+1 more)
tests/: manual_test_target.py  manual_verify_target.py  test_agent_progress.py  test_api.py  test_demo_examples.py  test_fix_agent.py  test_llm_gateway.py  test_report_agent.py  test_test_agent.py  test_verify_agent.py
tmp/: full_llm_example_api_results.json
(+31 files in other folders)
