[project]
name = "tcr-agent"
version = "0.1.0"
description = "A LangGraph-based test-compliance-fix agent prototype."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "pytest>=8",
]

[project.optional-dependencies]
dev = [
]

[project.scripts]
tcr-agent = "tcr_agent.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcr_agent = ["templates/*.md"]
