[project]
name = "tcr-agent"
version = "0.1.0"
description = "A LangGraph-based test-compliance-fix agent prototype."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "langgraph>=0.2",
  "pytest>=8",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
]

[project.scripts]
tcr-agent = "tcr_agent.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tcr_agent = ["templates/*.md"]
